[Fix] overflow hidden

--- a/css/travel_diary/travel_diary.css
+++ b/css/travel_diary/travel_diary.css
@@ -196,7 +196,6 @@
     display: -webkit-box;
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
-    overflow: hidden;
 }
 .grid-place-tag > span {
     margin-right: 5px;
